--- a/users/templates/users/profile.html
+++ b/users/templates/users/profile.html
@@ -10,5 +10,16 @@
         </div>
       </div>
       <!-- FORM HERE -->
+      <form method="POST">
+        {% csrf_token %}
+        <fieldset class="form-group" enctype="multipart/form-data">
+            <legend class="border-bottom mb-4">Profile info</legend>
+            {{u_form|crispy}}
+            {{p_form|crispy}}
+        </fieldset>
+        <div class="form-group">
+            <button class="btn btn-outline-info"type="submit">Update</button>
+        </div>
+    </form>
     </div>
 {% endblock content %}
