--- a/users/templates/users/profile.html
+++ b/users/templates/users/profile.html
@@ -10,9 +10,9 @@
         </div>
       </div>
       <!-- FORM HERE -->
-      <form method="POST">
+      <form method="POST" enctype="multipart/form-data">
         {% csrf_token %}
-        <fieldset class="form-group" enctype="multipart/form-data">
+        <fieldset class="form-group">
             <legend class="border-bottom mb-4">Profile info</legend>
             {{u_form|crispy}}
             {{p_form|crispy}}
