--- a/users/templates/users/profile.html
+++ b/users/templates/users/profile.html
@@ -20,6 +20,9 @@
         <div class="form-group">
             <button class="btn btn-outline-info"type="submit">Update</button>
         </div>
+        <small class="text-muted ml-2">
+          <a href="{% url 'password_reset' %}">Forgot Password</a>
+      </small>
     </form>
     </div>
 {% endblock content %}
