final commit before deployment

--- a/users/templates/users/profile.html
+++ b/users/templates/users/profile.html
@@ -20,8 +20,8 @@
         <div class="form-group">
             <button class="btn btn-outline-info"type="submit">Update</button>
         </div>
-        <small class="text-muted ml-2">
-          <a href="{% url 'password_reset' %}">Forgot Password</a>
+        <small class="text-muted">
+          <a class="btn btn-outline-info" href="{% url 'password_reset' %}">Change password</a>
       </small>
     </form>
     </div>
